enabling android module